# oca-sdk-rs

./: CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml
src/: lib.rs
src/data_validator/: mod.rs
src/validator/: mod.rs
tests/: captured_data_validation.rs
tests/assets/: captured_data.json  oca_bundle.json
tests/assets/semantics/: entrance_credential.ocafile  oca_bundle.json
