[package]
name = "oca-sdk-rs"
version = "0.1.5"
edition = "2021"
license = "EUPL-1.2"
readme = "README.md"
description = "Comprehensive SDK for OCA Bundle management and integration"

[dependencies]
lazy_static = "1.5.0"
oca-ast-semantics = { version = "0.6.10" }
oca-bundle-semantics = { version = "0.6.10", features = ["format_overlay"] }
oca-rs = { version = "0.6.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
transformation-file = { version = "0.6.10" }
